# ascii-world

./: .gitignore  ANIMATIONS.md  ANIMATION_STATUS.md  BATCH_CLI_IMPROVEMENTS.md  CHANGELOG.md  COMPARISON_WITH_MAIN.md  CONTRIBUTING.md  CURATED_DIRECTORY_ASSESSMENT.md  FINAL_TEST_RESULTS.md  LICENSE  README.md  README_TEST_RESULTS.md  REVERT_NOTE.md  USAGE.md  ascii-world.cabal  build and run.bat  run as script.bat  run_animations.bat  run_bench_utf8.bat  run_tests_utf8.bat  stack.yaml  test_all_animations.sh
.github/: pull_request_template.md
app/: Main.hs
bench/: Benchmarks.hs  README.md
day01 - Historian Hysteria/: day1 - problem.txt  day1.hs
day02 - Red-Nosed Reports/: day2.hs
day03 - Mull It Over/: day3 - problem.txt  day3.hs
day04 - Ceres Search/: day4 - problem.txt  day4.hs
day05 - Print Queue/: day5.hs
day06 - Guard Gallivant/: day6 (optimisation WIP).hs  day6 - problem.txt  day6.hs
day07 - Bridge Repair/: day7 - problem.txt  day7.hs
day08 - Resonant Collinearity/: day8.hs
day09 - Disk Fragmenter/: day9.hs
day10 - Hoof It/: day10.hs
day11 - Plutonian Pebbles/: day11 - problem.txt  day11.hs
day12 - Garden Groups/: ASCIIWorld.hs  AsciiWorld.hs  BWorld.hs  BitMask Theory (Explained).xcf  BitMask Theory 2.xcf  BitMask Theory.xcf  BitMask.hs  LWorld.hs  Layer.hs  Mask.hs  Util.hs  WalkableBoundedWorld.hs  WalkableBoundedWorldOptimised.hs  WalkableRepTilesWorld.hs  WalkableRepTilesWorldOptimised.hs  WalkableWorld (animating).hs  WalkableWorld.hs  World.hs  day12 (using worlds from day21).hs  day12.hs  run animation.bat
examples/: README.md  (+4 more)
(+322 files in other folders)
