cabal-version:       >=1.10
name:                ascii-world
version:             0.1.0.0
synopsis:            A library for working with ASCII worlds
description:         A library that provides functions for reading, modifying, and displaying ASCII worlds.
homepage:            https://github.com/yourusername/ascii-world
license:             BSD3
license-file:        LICENSE
author:              Your Name
maintainer:          your.email@example.com
category:            ASCII
build-type:          Simple

library
  hs-source-dirs:    src
  exposed-modules:   AsciiWorld
  other-modules:     Mask, Util
  build-depends:
      base >=4.12 && <5,
      containers >=0.6.7,
      split >=0.2.3.5,
      safe >=0.3.19,
      QuickCheck >=2.14.3
  default-language:  Haskell2010

test-suite ascii-world-test
  hs-source-dirs:    test
  main-is:           Spec.hs
  type:              exitcode-stdio-1.0
  build-depends:
      base,
      ascii-world,
      containers >= 0.6.7,
      ansi-terminal >=0.11.5,
      linear,
      array,
      hspec,
      QuickCheck >=2.14.3
  default-language:  Haskell2010
